# django_influxdb2_backend

./: README.md  pyproject.toml
django_influxdb2_backend/: __init__.py  base.py  client.py  compiler.py  creation.py  cursor.py  features.py  operations.py  validation.py
django_influxdb2_backend/metrics/: __init__.py  apps.py  models.py
django_influxdb2_backend/tests/: settings.py  test_flux_compiler.py
